# OFA

./: .gitignore  BUILD_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DvibecodingOFAgit_output.txt  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SDK_ROADMAP.md  SECURITY.md  agent_build.txt  check_git.bat  check_git.ps1  check_status.ps1  commit_v1.bat  dashboard_build.txt  do_commit.ps1  do_push.bat  do_push.ps1  docker-compose.yml  git_push.bat  git_push.ps1  git_push_final.ps1  mod_tidy_output.txt  offline_test_results.txt  p2p_test_results.txt  prepare_commit.ps1  start-dashboard.bat  test_results.txt  test_single.txt  vet_output.txt
.github/workflows/: ci-enhanced.yaml  ci.yaml  deploy.yaml
configs/: center-production.yaml  center.yaml
deploy/helm/ofa-center/: Chart.yaml  values.yaml
deploy/helm/ofa-center/templates/: _helpers.tpl  deployment.yaml  service.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml
deploy/prometheus/: prometheus.yml
deployments/: docker-compose.yaml  kubernetes-production.yaml  kubernetes.yaml  kubernetes.yml  prometheus.yml
deployments/helm/: Chart.yaml  values.yaml
docs/: 01-FEATURE_SPECIFICATION.md  02-TECH_SELECTION.md  03-ARCHITECTURE_DESIGN.md  04-SOLUTION_DESIGN.md  05-TEST_CASES.md  06-VERSION_PLAN.md  07-DEVIATION_ANALYSIS.md  08-PROJECT_SUMMARY.md  API.md  BENCHMARK.md  BENCHMARK_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_v8.md  DEVELOPMENT.md  DEVICE_GUIDE.md  E2E_TEST_PLAN.md  INTENT_SYSTEM.md  MEMORY_SYSTEM.md  OPERATION_GUIDE.md  PHASE_SUMMARY.md  PHASE_SUMMARY_V8.md  PROJECT_GUIDE.md  PROJECT_STRUCTURE.md  RETROSPECTIVE.md  ROADMAP.md  SCENE_DESIGN.md  SDK_ARCHITECTURE.md  SDK_ROADMAP.md  USER_GUIDE.md  VOICE_ROADMAP.md
issues/: 001-compile-errors.md  002-version-management.md  003-decentralization-enhancement.md
scripts/: README.md  commit_mcp_v1.bat  deploy.ps1  deploy.sh  e2e-test.sh  gen_proto.sh  integration-test.sh  ofa.bat  start.bat  start.sh  test-center.sh  test_api.ps1  test_e2e.ps1  test_e2e.sh  test_metrics.ps1  test_performance.ps1  test_performance.sh  test_tts_api.bat
skills/: README.md
skills/core/calc/: skill.yaml
skills/core/json/: main.py  skill.yaml
skills/core/text/: main.py  skill.yaml
src/agent/go/: Dockerfile  go.mod
src/center/: Dockerfile  DvibecodingOFAbuild_result.txt  center_build.txt  err.txt  go.mod  go.sum  go_version.txt  run_tests.bat  scheduler_test.txt  test_api.bat  test_output.txt  test_result.txt
src/center/cmd/center/: main.go
src/center/configs/: center.yaml
src/center/docs/: CENTER_DESIGN.md
src/center/internal/avatar/: engine.go  engine_test.go
src/center/internal/behavior/: engine.go  engine_test.go
src/center/internal/benchmark/: benchmark.go  identity_bench_test.go  metrics.go  websocket_bench_test.go
src/center/internal/cache/: advanced_cache.go  cache_test.go
src/center/internal/config/: config.go
src/center/internal/culture/: engine.go  engine_test.go
src/center/internal/decision/: engine.go  explainer.go  scorer.go  store.go
src/center/internal/display/: engine.go
src/center/internal/emotion/: engine.go  engine_test.go
src/center/internal/expression/: engine.go  engine_test.go
src/center/internal/gateway/: gateway.go  gateway_test.go
src/center/internal/health/: health.go  health_test.go
src/center/internal/identity/: evolution.go  inferencer.go  performance_test.go  postgres_store.go  service.go  service_test.go  store.go  sync_service.go
src/center/internal/lifestage/: engine.go  engine_test.go
src/center/internal/llm/: claude.go  engine.go  openai.go  provider.go  provider_test.go
src/center/migrations/: v7.1.0_schema.sql
src/center/pkg/ha/: mesh.go  (+3 more)
src/center/proto/: api.go  decision.go  helpers.go  identity.go  memory.go  ofa.go  ofa_grpc.go  preference.go  voice.go
src/center/test/: simple_test.go  test_rest_api.ps1  tts_api_test.go
src/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/dashboard/src/: App.vue  main.ts
src/protocol/proto/: ofa.proto
src/sdk/android/: CHANGELOG.md  README.md  build.bat  build.gradle  build.ps1  consumer-rules.pro  gradle.properties  gradlew.bat  settings.gradle  test_build.bat  test_build.sh
src/sdk/cpp/ofa_agent/: CMakeLists.txt
src/sdk/cpp/ofa_agent/examples/: example.cpp
src/sdk/cpp/ofa_agent/include/ofa/: agent.hpp  config.hpp  connection.hpp  constraint.hpp  error.hpp  message.hpp  offline.hpp  p2p.hpp  protocol.hpp  skills.hpp  types.hpp
src/sdk/cpp/ofa_agent/src/: agent.cpp  builtin.cpp  config.cpp  connection.cpp  constraint.cpp  message.cpp  offline.cpp  p2p.cpp  protocol.cpp  skills.cpp
src/sdk/desktop/: agent.go  builtins.go  constraint.go  offline.go  p2p.go  platform_unix.go  platform_windows.go  skills.go  tray_unix.go  tray_windows.go
src/sdk/go/: README.md  agent.go  constraint.go  go.mod  offline.go  p2p.go
src/sdk/ios/: Package.swift  README.md
src/sdk/iot/: agent.go  constraint.go  devices.go  mqtt.go  offline.go  p2p.go
src/sdk/lite/: agent.go  constraint.go  example.go  offline.go  p2p.go  protocol.go
src/sdk/openharmony/: BUILD.gn  README.md
src/sdk/openharmony/core/: agent.cpp  connection.cpp  local_scheduler.cpp  offline_cache.cpp
src/sdk/openharmony/include/ofa/: agent.h
src/sdk/openharmony/napi/: agent_napi.cpp
src/sdk/openharmony/p2p/: discovery.cpp
src/sdk/openharmony/skills/: builtin.cpp
src/sdk/python/: README.md  example.py  pyproject.json  pyproject.toml
src/sdk/python/examples/: agent_example.py  offline_example.py
src/sdk/python/ofa/: __init__.py
src/sdk/python/ofa_agent/: __init__.py  agent.py  builtin.py  connection.py  constraint.py  offline.py  p2p.py  protocol.py  skills.py
src/sdk/rust/ofa_agent/: Cargo.toml
src/sdk/rust/ofa_agent/src/: agent.rs  config.rs  connection.rs  constraint.rs  error.rs  lib.rs  message.rs  offline.rs  p2p.rs  protocol.rs  skills.rs
src/sdk/web/: README.md  package.json  tsconfig.json
tests/e2e/: E2E_SCENARIOS.md
(+598 files in other folders)
