[package]
name = "ofa-agent"
version = "8.1.0"
edition = "2021"
authors = ["OFA Team"]
license = "Apache-2.0"
description = "OFA Rust Agent SDK - High-performance distributed agent system"
keywords = ["agent", "distributed", "grpc", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
prost = "0.12"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["grpc"]
grpc = ["tonic"]
websocket = []
mqtt = []